--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -47,9 +47,12 @@ jobs:
     
     - name: Commit and push changes
       if: github.ref == 'refs/heads/main'
+      env:
+        GH_TOKEN: ${{ secrets.GH_PAT }}
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git remote set-url origin https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }}
         git add k8s/deployment.yaml
         git diff --staged --quiet || git commit -m "Update image tag to ${{ github.sha }}"
         git push
